fix: fix for build